@startuml
' --- shared skin header ---
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
' --------------------------
title Class structure - Write files safely

class WritePlan {
  +Entries: IReadOnlyList<GeneratedFile>
  +HasChanges: bool
}

class GeneratedFile {
  +RelativePath: string
  +Content: string
  +Action: FileAction
}

enum FileAction {
  Create
  Update
  Unchanged
}

class OverwritePolicy {
  +Plan(generated: IReadOnlyList<GeneratedFile>): WritePlan
  -Decide(generated: GeneratedFile, lineEnding: string): GeneratedFile
}

interface IDryRunReporter {
  +Report(plan: WritePlan): void
}
class DryRunReporter {
  +Report(plan: WritePlan): void
  -Diff(existing: string, generated: string): string
}

interface IFileWriter {
  +Apply(plan: WritePlan): IReadOnlyList<FileAction>
}
class AtomicFileWriter {
  +Apply(plan: WritePlan): IReadOnlyList<FileAction>
  -WriteThroughTemporary(path: string, content: string): void
}

class LineEndingPolicy {
  +Resolve(root: RepositoryRoot): string
}

class EncodingPolicy {
  +{static} Encoding: Encoding
  +Normalize(content: string): string
}

class FilePermissions {
  +Apply(path: string): void
}

IDryRunReporter <|.. DryRunReporter
IFileWriter <|.. AtomicFileWriter
WritePlan o-- "*" GeneratedFile : holds
GeneratedFile --> FileAction : declares
OverwritePolicy ..> WritePlan : sets actions on
DryRunReporter ..> WritePlan : renders
AtomicFileWriter ..> WritePlan : applies
AtomicFileWriter --> LineEndingPolicy : applies
AtomicFileWriter --> EncodingPolicy : applies
AtomicFileWriter --> FilePermissions : applies
@enduml
